fixed spacing format on about page for resizing

--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -127,3 +127,32 @@ footer {
     }
   }
 }
+
+/* about page */
+#hankAbout {
+margin-left:auto;
+margin-right:auto;
+float: center;
+height:auto;
+width:auto;
+}
+
+#dakotahAbout {
+margin-left:auto;
+margin-right:auto;
+float: center;
+height:auto;
+width:auto;
+clear: both;
+}
+
+#keithAbout {
+margin-left:auto;
+margin-right:auto;
+float: center;
+height:auto;
+width:auto;
+clear: both;
+}
+
+
